fix(tutorial): Add note about background, adjust tutorial highlight z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -120,6 +120,6 @@ ul.pagination, ol.breadcrumb {
 }
 
 .tutorial-backdrop {
-  z-index: 1050;
+  z-index: 2000;
   box-shadow: 0 0 1rem 1rem rgba(#007bff, .5);
 }
